--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^36.0.1",
+    "@ckeditor/ckeditor5-react": "^5.1.0",
     "@date-io/date-fns": "^2.16.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -18,6 +20,8 @@
     "@mui/styles": "^5.11.2",
     "axios": "^1.2.2",
     "bootstrap": "4.6.0",
+    "chart.js": "3.9.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "connected-react-router": "^6.9.1",
     "date-fns": "^2.29.3",
     "lodash": "^4.17.21",
@@ -30,6 +34,7 @@
     "react": "^17.0.2",
     "react-auth-wrapper": "^1.0.0",
     "react-autosuggest": "^10.1.0",
+    "react-chartjs-2": "^4.3.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-flatpickr": "^3.10.7",
