--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "react-scripts": "^4.0.3",
     "react-select": "4.3.1",
     "react-slick": "^0.28.0",
-    "react-toastify": "^5.5.0",
+    "react-toastify": "8.0.0",
     "reactstrap": "^8.9.0",
     "redux": "^4.1.0",
     "redux-auth-wrapper": "^2.1.0",
