--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@formatjs/intl-pluralrules": "^3.5.6",
     "@formatjs/intl-relativetimeformat": "^7.3.6",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
-    "@material-ui/core": "4.3.1",
+    "@material-ui/core": "4.11.4",
     "@material-ui/icons": "4.9.1",
     "@material-ui/lab": "4.0.0-alpha.22",
     "@material-ui/pickers": "^3.3.10",
@@ -24,9 +24,10 @@
     "chartjs-plugin-datalabels": "^2.2.0",
     "connected-react-router": "^6.9.1",
     "date-fns": "^2.29.3",
+    "dateformat": "^5.0.3",
     "lodash": "^4.17.21",
     "markdown-it": "12.1.0",
-    "material-table": "^1.57.2",
+    "material-table": "1.61.0",
     "material-ui": "^1.0.0-beta.47",
     "material-ui-dropzone": "^3.5.0",
     "moment": "^2.29.0",
